# fourier-python-demo

./: README.md  pyproject.toml
fourier_python_demo/: close_data.json  data_supplier_service.py  main.py  main_older.py
tests/: test_fourier_python_demo.py
