[tool.poetry]
name = "fourier-python-demo"
version = "0.1.0"
description = ""
authors = ["kirin <kirin.chen1001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"
matplotlib = "^3.7.0"
scipy = "1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
